--- a/example/Untitled1.ipynb
+++ b/example/Untitled1.ipynb
@@ -2,17 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
     "from monitor_bot.bot import MonitorBot\n",
-    "from io import BytesIO\n",
+    "bot = MonitorBot()\n",
     "\n",
-    "bot = MonitorBot()"
+    "@bot.response_to(\"グラフ*\")\n",
+    "def func(message):\n",
+    "    ch = message['channel']\n",
+    "    bot.send_message(ch, 'ちょっとまって')\n",
+    "    plt.plot([1, 3, 2])\n",
+    "    bot.upload_pyplot(ch, plt)"
    ]
   },
   {
@@ -24,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
