Modify readme, example

--- a/example/Example.ipynb
+++ b/example/Example.ipynb
@@ -55,7 +55,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fd060501160>"
+       "<matplotlib.figure.Figure at 0x7f1dfb16dbe0>"
       ]
      },
      "metadata": {},
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,12 +81,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Slackから送られてきたメッセージに応答する."
+    "### 3. Slackから送られてきたメッセージに対応して関数を実行する."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +98,7 @@
     }
    ],
    "source": [
+    "# \"グラフ\"という文字を含むメッセージに対して反応する.\n",
     "@bot.response_to(\"グラフ*\")\n",
     "def func(message):\n",
     "    ch = message['channel']\n",
