--- a/example/Example.ipynb
+++ b/example/Example.ipynb
@@ -33,9 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f7c04adbc88>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "bot.send_message(send_to, \"Hello\")"
    ]
@@ -55,7 +65,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f1dfb16dbe0>"
+       "<matplotlib.figure.Figure at 0x7f7c04a7fe80>"
       ]
      },
      "metadata": {},
@@ -103,7 +113,7 @@
     "def func(message):\n",
     "    ch = message['channel']\n",
     "    plt.plot([1, 3, 2])\n",
-    "    bot.upload_pyplot(ch, plt)"
+    "    bot.upload_pyplot(send_to, plt)"
    ]
   },
   {
